# shrt

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  Rocket.toml  docker-compose.yml  shrt-backend.dockerfile  shrt-frontend.dockerfile
.github/workflows/: docker-publish.yml  rust.yml
shrt-backend/: Cargo.toml
shrt-backend/src/: api.rs  lib.rs  main.rs  migrations.rs  models.rs  pool.rs
shrt-backend/src/api/: auth.rs  links.rs
shrt-backend/src/migrations/: m_0001_initial.rs
shrt-backend/tests/: api_tests.rs
shrt-common/: Cargo.toml
shrt-common/src/: auth.rs  errors.rs  lib.rs  links.rs  tile_set.rs
shrt-entity/: Cargo.toml
shrt-entity/src/: link.rs  user.rs
shrt-frontend/: Cargo.toml  index.html
shrt-frontend/src/: api.rs  app.rs  error_alert.rs  hand_example.rs  input.rs  link_result.rs  list_links.rs  main.rs  not_found.rs  pagination.rs  remove_link_modal.rs  select.rs  url_shortener.rs
shrt-migration/: Cargo.toml
shrt-migration/src/: lib.rs  m20240302_000001_create_table_link.rs  m20240421_013232_auth.rs
