[workspace]
members = [
    "shrt-common",
    "shrt-backend",
    "shrt-entity",
    "shrt-frontend",
    "shrt-migration",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.76"

categories = ["rendering", "wasm", "web-programming"]
authors = ["Mateusz Maćkowski <mateusz@mackowski.org>"]
keywords = ["riichi", "mahjong", "renderer"]
readme = "README.md"
repository = "https://github.com/m4tx/shrt.git"
homepage = "https://github.com/m4tx/shrt"
license = "AGPL-3.0-only"
publish = false

[profile.release]
panic = 'abort'
codegen-units = 1
lto = true

[profile.release.package."shrt-frontend"]
opt-level = 'z'

[workspace.dependencies]
async-std = "1.13.2"
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
console_log = "1.0.0"
getrandom = "0.3"
gloo-console = "0.3.0"
gloo-net = "0.6.0"
implicit-clone = "0.6"
log = { version = "0.4.29", features = ["max_level_trace", "release_max_level_info"] }
nanoid = "0.4.0"
okapi = "0.7.0"
rand = "0.9"
rocket = "0.5.0"
rocket-cache-response = "0.6.4"
rocket_okapi = { version = "0.8.0", features = ["swagger"] }
schemars = { version = "0.8.22", features = ["chrono"] }
sea-orm = "1.0.1"
sea-orm-migration = "1.0.1"
sea-orm-rocket = { git = "https://github.com/SeaQL/sea-orm", tag = "1.1.3", features = ["rocket_okapi"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.148"
time = "0.3.44"
urlencoding = "2.1.3"
wasm-bindgen = "0.2.97"
wasm-bindgen-futures = "0.4.47"
web-sys = "0.3.72"
yew = "0.22"
yew-hooks = "0.4"
yew-router = "0.19"
