[workspace]
members = [
    "shrt-common",
    "shrt-backend",
    "shrt-frontend",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.76"

categories = ["rendering", "wasm", "web-programming"]
authors = ["Mateusz Maćkowski <mateusz@mackowski.org>"]
keywords = ["riichi", "mahjong", "renderer"]
readme = "README.md"
repository = "https://github.com/m4tx/shrt.git"
homepage = "https://github.com/m4tx/shrt"
license = "AGPL-3.0-only"
publish = false

[profile.release]
panic = 'abort'
codegen-units = 1
lto = true

[profile.release.package."shrt-frontend"]
opt-level = 'z'

[workspace.dependencies]
async-std = "1.13"
async-trait = "0.1"
chrono = { version = "0.4.45", features = ["serde"] }
console_log = "1.0.0"
cot = { git = "https://github.com/cot-rs/cot.git", rev = "b06e781865a9a67328a8b088a46f9e1ae555f386", default-features = false }
getrandom = "0.3"
gloo-net = "0.7.0"
implicit-clone = "0.6"
log = { version = "0.4.33", features = ["max_level_trace", "release_max_level_info"] }
nanoid = "0.5.0"
rand = "0.9"
schemars = { version = "1", features = ["chrono04"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.149"
time = "0.3.47"
urlencoding = "2.1.3"
wasm-bindgen = "0.2.126"
wasm-bindgen-futures = "0.4.76"
web-sys = "0.3.103"
yew = "0.23.0"
yew-hooks = "0.6.4"
yew-router = "0.20.0"
