[workspace]
members = [
    "shrt-common",
    "shrt-backend",
    "shrt-frontend",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96"

categories = ["web-programming"]
authors = ["Mateusz Maćkowski <mateusz@mackowski.org>"]
keywords = ["snip", "link", "url", "short", "webapp"]
readme = "README.md"
repository = "https://github.com/m4tx/shrt.git"
homepage = "https://github.com/m4tx/shrt"
license = "AGPL-3.0-only"
publish = false

[profile.release]
panic = 'abort'
codegen-units = 1
lto = true

[profile.release.package."shrt-frontend"]
opt-level = 'z'

[workspace.dependencies]
async-std = "1.13"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
console_log = "1"
cot = { git = "https://github.com/cot-rs/cot.git", rev = "b06e781865a9a67328a8b088a46f9e1ae555f386", default-features = false }
dioxus = { version = "0.7", features = ["web", "router"] }
getrandom = "0.4"
gloo-net = "0.7"
gloo-timers = { version = "0.4", features = ["futures"] }
js-sys = "0.3"
indexmap = "2"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
nanoid = "0.5"
rand = "0.10"
reqwest = "0.13"
schemars = { version = "1", features = ["chrono04"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = "0.3"
tokio = "1"
urlencoding = "2"
wasm-bindgen = "0.2"
