[package]
name = "shrt-backend"
description = "Link shortener service - backend service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

categories.workspace = true
authors.workspace = true
keywords.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
argon2.workspace = true
async-trait.workspace = true
chrono.workspace = true
clap.workspace = true
const_format.workspace = true
log.workspace = true
nanoid.workspace = true
okapi.workspace = true
rocket-cache-response.workspace = true
rocket.workspace = true
rocket_okapi.workspace = true
schemars.workspace = true
sea-orm-rocket.workspace = true
sea-orm = { workspace = true, features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio-native-tls", "macros", "with-chrono"] }
serde.workspace = true
serde_json.workspace = true
shadow-rs.workspace = true
shrt-common = { path = "../shrt-common", features = ["backend"] }
shrt-entity = { path = "../shrt-entity" }
shrt-migration = { path = "../shrt-migration" }
time.workspace = true

[build-dependencies]
shadow-rs.workspace = true
