[package]
name = "shrt-backend"
description = "Link shortener service - backend service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

categories.workspace = true
authors.workspace = true
keywords.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
chrono = { workspace = true }
cot = { path = "../../cot/cot", features = ["full", "postgres", "sqlite"] } # Enable db backends
log = { workspace = true }
nanoid = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shrt-common = { path = "../shrt-common", features = ["backend"] }
tokio = { version = "1", features = ["full"] }
