[package]
name = "shrt-common"
description = "Link shortener service - backend/frontend common logic and data structures"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

categories.workspace = true
authors.workspace = true
keywords.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true
cot = { path = "../../cot/cot", optional = true }
chrono.workspace = true
schemars = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
gloo-net = { workspace = true, optional = true }

[features]
backend = ["schemars", "cot", "serde_json"]
frontend = ["gloo-net"]
