[package]
name = "shrt-entity"
description = "Link shortener service - database entities"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

categories.workspace = true
authors.workspace = true
keywords.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
rocket.workspace = true
rocket_okapi.workspace = true
sea-orm.workspace = true
serde = { version = "1.0.196", features = ["derive"] }
