[package]
name = "shrt-frontend"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"

description = "Link shortener service - webapp frontend"
categories = ["rendering", "wasm", "web-programming"]
authors = ["Mateusz Maćkowski <mateusz@mackowski.org>"]
keywords = ["riichi", "mahjong", "renderer"]
readme = "../README.md"
repository = "https://github.com/m4tx/shrt.git"
homepage = "https://github.com/m4tx/shrt"
license = "AGPL-3.0-only"

[dependencies]
base64 = "0.21.7"
chrono.workspace = true
gloo-console = "0.3.0"
gloo-net = "0.5.0"
rand = "0.8.5"
serde-wasm-bindgen = "0.6.5"
serde.workspace = true
shrt-common = { path = "../shrt-common", features = ["frontend"] }
urlencoding = "2.1.3"
wasm-bindgen = "0.2.90"
wasm-bindgen-futures = "0.4.39"
web-sys = { version = "0.3.67", features = ["console", "HtmlElement", "HtmlButtonElement", "HtmlSelectElement", "MouseEvent", "DomRect"] }
yew = { version = "0.21", features = ["csr"] }
yew-hooks = "0.3.1"
yew-router = "0.18.0"
