[package]
name = "shrt-frontend"
description = "Link shortener service - webapp frontend"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

categories.workspace = true
authors.workspace = true
keywords.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
base64.workspace = true
chrono.workspace = true
console_log = { workspace = true, features = ["color"] }
gloo-net.workspace = true
implicit-clone.workspace = true
log.workspace = true
rand.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
shrt-common = { path = "../shrt-common", features = ["frontend"] }
urlencoding.workspace = true
wasm-bindgen-futures.workspace = true
wasm-bindgen.workspace = true
web-sys = { workspace = true, features = ["console", "HtmlElement", "HtmlButtonElement", "HtmlSelectElement", "MouseEvent", "DomRect"] }
yew = { workspace = true, features = ["csr"] }
yew-hooks.workspace = true
yew-router.workspace = true
