[package]
name = "shrt-frontend"
description = "Link shortener service - webapp frontend"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

categories.workspace = true
authors.workspace = true
keywords.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
chrono.workspace = true
console_log = { workspace = true, features = ["color"] }
dioxus.workspace = true
getrandom = { workspace = true, features = ["wasm_js"] }
gloo-net.workspace = true
gloo-timers.workspace = true
js-sys.workspace = true
log.workspace = true
rand.workspace = true
serde.workspace = true
shrt-common = { path = "../shrt-common", features = ["frontend"] }
urlencoding.workspace = true
