[package]
name = "shrt-migration"
description = "Link shortener service - database migrations"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

categories.workspace = true
authors.workspace = true
keywords.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { workspace = true, features = ["attributes", "tokio1"] }
sea-orm-migration = { workspace = true, features = [
    # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run shrt-migration via CLI.
    # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
    # e.g.
    # "runtime-tokio-rustls",  # `ASYNC_RUNTIME` feature
    # "sqlx-postgres",         # `DATABASE_DRIVER` feature
]}
